# Barkley-finitewave-model

./: README.md  pyproject.toml
barkley/: ops.py
examples/: barkley_example.py
implementation/: barkley_0d.py
tests/: barkley_test.py
