[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "barkley-finitewave-model"
version = "0.1.0"
description = "Barkley model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["cardiac", "electrophysiology", "finitewave", "model"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Medical Science Apps."
]

dependencies = []

[project.entry-points."finitewave.models"]
barkley = "barkley.ops"

[tool.hatch.build.targets.wheel]
packages = ["barkley"]

[tool.hatch.metadata]
allow-direct-references = true